--- a/Recipe.html
+++ b/Recipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Search</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Recipe.css">
     <script src="ingrdients.js" defer></script>
 </head>
 
